vpn-api/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-api
  labels:
    app: vpn-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-api
  template:
    metadata:
      labels:
        app: vpn-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/outi-ops/vpn-api:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/vpn-api
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: vpn-api-config
