vpn-api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpn-api
  labels:
    app: vpn-api
spec:
  type: ClusterIP
  selector:
    app: vpn-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
