vpn-api/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.vpn.outi.ir
      secretName: vpn-api-tls
  rules:
    - host: api.vpn.outi.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-api
                port:
                  number: 8080
